--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <meta name="google-site-verification" content="qAYJedcN0fPP6Q3vT2RJD4XfE9j4Fj4JR4wo6YNhW5A" />
     <title>APPaNail Review A Comprehensive Analysis of the Nail and Foot Health Product</title>
   </head>
   <body>
